--- a/examples/kubectl/nfs-ingress/nfs-storage.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-storage.yaml
@@ -6,12 +6,19 @@
 # The nfs server ip-address is now configured in the persistent volume object.
 #
 kind: StorageClass
-apiVersion: storage.k8s.io/v1
+apiVersion: storage.k8s.io/v1beta1
 metadata:
   name: nfs-storage
-  annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
-  labels:
-    kubernetes.io/cluster-service: "true"
-provisioner: kubernetes.io/nfs
-reclaimPolicy: Retain
+provisioner: autostructure.io/nfs-storage
+
+# kubernetes version...
+# kind: StorageClass
+# apiVersion: storage.k8s.io/v1
+# metadata:
+#   name: nfs-storage
+#   annotations:
+#     storageclass.kubernetes.io/is-default-class: "true"
+#   labels:
+#     kubernetes.io/cluster-service: "true"
+# provisioner: kubernetes.io/nfs
+# reclaimPolicy: Retain
