--- a/examples/kubectl/nfs-ingress/nfs-server.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-server.yaml
@@ -31,7 +31,7 @@ spec:
         path: /srv/nfs-provisioner/autostructure-development/nfs-server
   containers:
     - name: nfs-provisioner
-      image: quay.io/kubernetes_incubator/nfs-provisioner:v1.0.8
+      image: quay.io/kubernetes_incubator/nfs-provisioner:latest
       ports:
         - name: nfs
           containerPort: 2049
