--- a/examples/kubectl/nfs-ingress/nfs-storage.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-storage.yaml
@@ -9,6 +9,8 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
   name: nfs-storage
+  labels:
+    type: nfs
 provisioner: autostructure.io/nfs-storage
 
 # kubernetes version...
