--- a/examples/kubectl/nfs-ingress/nfs-server.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-server.yaml
@@ -19,6 +19,32 @@
 #
 # @See https://github.com/kubernetes/kubernetes/issues/52787
 #
+
+# ---
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   namespace: default
+#   name: nfs-server
+#   labels:
+#     role: nfs-server
+# spec:
+#   tolerations:
+#   - key: node-role.kubernetes.io/nfs-server
+#     effect: NoSchedule
+#   nodeSelector:
+#     node-role.kubernetes.io/nfs-server: "nfs-server"
+#   restartPolicy: Always
+#   containers:
+#   - name: nfs-server
+#     image: gcr.io/google_containers/volume-nfs:0.8
+#     securityContext:
+#       privileged: true
+#     ports:
+#       - name: nfs-0
+#         containerPort: 2049
+#         protocol: TCP
+
 kind: Pod
 apiVersion: v1
 metadata:
@@ -50,7 +76,7 @@ spec:
           add:
             - DAC_READ_SEARCH
       args:
-        - "-provisioner=autostructure.io/nfs-storage"
+        - "-provisioner=kubernetes.io/nfs"
         - "-grace-period=0"
       env:
         - name: NFS_NODE_NAME
