--- a/examples/kubectl/nfs-ingress/nfs-volume.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-volume.yaml
@@ -11,6 +11,30 @@
 # the nfs ip address in the autostructure-development namespace.
 # The PersistentVolumeClaim wont care which volume it connects to,
 # as long as the volume satisfies the claim (e.g. does it have the space?)
+
+# ---
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: nfs-vol-autostructure-development
+#   labels:
+#     type: nfs
+# spec:
+#   storageClassName: nfs-storage
+#   capacity:
+#     storage: 16Gi
+#   accessModes:
+#     - ReadWriteMany
+#     # - ReadWriteOnce
+#     # - ReadOnlyMany
+#     # - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Retain
+#   nfs:
+#     server: 10.0.65.70
+#     path: /
+
+
+# added storageClassName: nfs-storage
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -18,6 +42,7 @@ metadata:
   labels:
     type: nfs
 spec:
+  storageClassName: nfs-storage
   capacity:
     storage: 16Gi
   accessModes:
@@ -28,7 +53,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 10.0.65.68
-    path: /
+    path: /export
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -37,6 +62,7 @@ metadata:
   labels:
     type: nfs
 spec:
+  storageClassName: nfs-storage
   capacity:
     storage: 16Gi
   accessModes:
@@ -46,5 +72,5 @@ spec:
     # - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: 10.0.210.150
-    path: /
+    server: 10.0.210.155
+    path: /export
