--- a/examples/kubectl/nfs-ingress/nfs-server.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-server.yaml
@@ -19,65 +19,65 @@
 #
 # @See https://github.com/kubernetes/kubernetes/issues/52787
 #
-kind: Pod
-apiVersion: v1
-metadata:
-  namespace: default
-  name: nfs-server
-  labels:
-    role: nfs-server
-spec:
-  volumes:
-    - name: nfs-export-volume
-      hostPath:
-        path: /srv/nfs-provisioner/default/nfs-server
-  containers:
-    - name: nfs-provisioner
-      image: quay.io/kubernetes_incubator/nfs-provisioner:latest
-      ports:
-        - name: nfs
-          containerPort: 2049
-          protocol: TCP
-        - name: mountd
-          containerPort: 20048
-        - name: rpcbind
-          containerPort: 111
-        - name: rpcbind-udp
-          containerPort: 111
-          protocol: UDP
-      securityContext:
-        privileged: true
-        capabilities:
-          add:
-            - DAC_READ_SEARCH
-      args:
-        - "-provisioner=kubernetes.io/nfs"
-        - "-grace-period=0"
-      env:
-        - name: NFS_NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: NFS_POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: SERVICE_NAME
-          value: nfs-server
-      imagePullPolicy: "IfNotPresent"
-      volumeMounts:
-        - name: nfs-export-volume
-          mountPath: /export
-  nodeSelector:
-    node-role.kubernetes.io/nfs-server: "nfs-server"
+# kind: Pod
+# apiVersion: v1
+# metadata:
+#   namespace: default
+#   name: nfs-server
+#   labels:
+#     role: nfs-server
+# spec:
+#   volumes:
+#     - name: nfs-export-volume
+#       hostPath:
+#         path: /srv/nfs-provisioner/default/nfs-server
+#   containers:
+#     - name: nfs-provisioner
+#       image: quay.io/kubernetes_incubator/nfs-provisioner:latest
+#       ports:
+#         - name: nfs
+#           containerPort: 2049
+#           protocol: TCP
+#         - name: mountd
+#           containerPort: 20048
+#         - name: rpcbind
+#           containerPort: 111
+#         - name: rpcbind-udp
+#           containerPort: 111
+#           protocol: UDP
+#       securityContext:
+#         privileged: true
+#         capabilities:
+#           add:
+#             - DAC_READ_SEARCH
+#       args:
+#         - "-provisioner=kubernetes.io/nfs"
+#         - "-grace-period=0"
+#       env:
+#         - name: NFS_NODE_NAME
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: spec.nodeName
+#         - name: NFS_POD_NAME
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: metadata.name
+#         - name: POD_IP
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: status.podIP
+#         - name: POD_NAMESPACE
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: metadata.namespace
+#         - name: SERVICE_NAME
+#           value: nfs-server
+#       imagePullPolicy: "IfNotPresent"
+#       volumeMounts:
+#         - name: nfs-export-volume
+#           mountPath: /export
+#   nodeSelector:
+#     node-role.kubernetes.io/nfs-server: "nfs-server"
 ---
 kind: Pod
 apiVersion: v1
@@ -135,7 +135,7 @@ spec:
       imagePullPolicy: "IfNotPresent"
       volumeMounts:
         - name: nfs-export-volume
-          mountPath: /export
+          mountPath: /exports
   nodeSelector:
     node-role.kubernetes.io/nfs-server: "nfs-server"
 
