--- a/examples/kubectl/nfs-ingress/nfs-volume.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-volume.yaml
@@ -56,7 +56,7 @@ spec:
     path: /
 ---
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolume0
 metadata:
   name: nfs-vol-autostructure-development
   labels:
