--- a/examples/kubectl/nfs-ingress/nfs-volume.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-volume.yaml
@@ -9,34 +9,11 @@
 # However, nfs runs in a container (with a namespace).
 # So, a separate PersistentVolume is necessary to point to
 # the nfs ip address in the autostructure-development namespace.
-# The PersistentVolumeClaim wont care which volume it connects to,
+# The Persisten71olumeClaim wont care which volume it connects to,
 # as long as the volume satisfies the claim (e.g. does it have the space?)
-
-# ---
-# apiVersion: v1
-# kind: PersistentVolume
-# metadata:
-#   name: nfs-vol-autostructure-development
-#   labels:
-#     type: nfs
-# spec:
-#   storageClassName: nfs-storage
-#   capacity:
-#     storage: 16Gi
-#   accessModes:
-#     - ReadWriteMany
-#     # - ReadWriteOnce
-#     # - ReadOnlyMany
-#     # - ReadWriteMany
-#   persistentVolumeReclaimPolicy: Retain
-#   nfs:
-#     server: 10.0.65.70
-#     path: /
-
-
 # added storageClassName: nfs-storage
-apiVersion: v1
 kind: PersistentVolume
+apiVersion: v1
 metadata:
   name: nfs-vol-default
   labels:
@@ -44,7 +21,7 @@ metadata:
 spec:
   storageClassName: nfs-storage
   capacity:
-    storage: 16Gi
+    storage: 32Gi
   accessModes:
     - ReadWriteMany
     # - ReadWriteOnce
@@ -52,25 +29,5 @@ spec:
     # - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: 10.0.210.161
-    path: /
----
-apiVersion: v1
-kind: PersistentVolume0
-metadata:
-  name: nfs-vol-autostructure-development
-  labels:
-    type: nfs
-spec:
-  storageClassName: nfs-storage
-  capacity:
-    storage: 16Gi
-  accessModes:
-    - ReadWriteMany
-    # - ReadWriteOnce
-    # - ReadOnlyMany
-    # - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  nfs:
-    server: 10.0.210.165
+    server: 10.0.210.171
     path: /
