--- a/examples/kubectl/nfs-ingress/nfs-server.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-server.yaml
@@ -82,62 +82,131 @@
 kind: Pod
 apiVersion: v1
 metadata:
-  namespace: autostructure-development
+  namespace: default
   name: nfs-server
   labels:
     role: nfs-server
 spec:
-  volumes:
-    - name: nfs-export-volume
-      hostPath:
-        path: /srv/nfs-provisioner/autostructure-development/nfs-server
-  containers:
-    - name: nfs-provisioner
-      image: quay.io/kubernetes_incubator/nfs-provisioner:latest
-      ports:
-        - name: nfs
-          containerPort: 2049
-          protocol: TCP
-        - name: mountd
-          containerPort: 20048
-        - name: rpcbind
-          containerPort: 111
-        - name: rpcbind-udp
-          containerPort: 111
-          protocol: UDP
-      securityContext:
-        privileged: true
-        capabilities:
-          add:
-            - DAC_READ_SEARCH
-      args:
-        - "-provisioner=kubernetes.io/nfs"
-        - "-grace-period=0"
-      env:
-        - name: NFS_NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        - name: NFS_POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
-        - name: SERVICE_NAME
-          value: nfs-server
-      imagePullPolicy: "IfNotPresent"
-      volumeMounts:
-        - name: nfs-export-volume
-          mountPath: /export
+  tolerations:
+    - key: node-role.kubernetes.io/nfs-server
+      effect: NoSchedule
   nodeSelector:
     node-role.kubernetes.io/nfs-server: "nfs-server"
+  restartPolicy: Always
+  volumes:
+    - name: nfs-hostpath-volume
+      hostPath:
+        path: /srv/nfs-provisioner/nfs-server
+  containers:
+    - name: nfs-server
+      image: gcr.io/google_containers/volume-nfs:0.8
+      imagePullPolicy: "IfNotPresent"
+      securityContext:
+        privileged: true
+      ports:
+        - name: nfs-2049
+          containerPort: 2049
+          protocol: TCP
+      volumeMounts:
+        - name: nfs-hostpath-volume
+          mountPath: /exports
+  nodeSelector:
+    node-role.kubernetes.io/nfs-server: "nfs-server"
+
+# kind: Pod
+# apiVersion: v1
+# metadata:
+#   namespace: default
+#   name: nfs-server
+#   labels:
+#     role: nfs-server
+# spec:
+#   tolerations:
+#   - key: node-role.kubernetes.io/nfs-server
+#     effect: NoSchedule
+#   nodeSelector:
+#     node-role.kubernetes.io/nfs-server: "nfs-server"
+#   restartPolicy: Always
+#   volumes:
+#     - name: nfs-hostpath-volume
+#       hostPath:
+#         path: /srv/nfs-provisioner/autostructure-development/nfs-server
+#   containers:
+#     - name: nfs-server
+#       image: gcr.io/google_containers/volume-nfs:0.8
+#       imagePullPolicy: "IfNotPresent"
+#       securityContext:
+#         privileged: true
+#       ports:
+#         - name: nfs-2049
+#           containerPort: 2049
+#           protocol: TCP
+#       volumeMounts:
+#         - name: nfs-hostpath-volume
+#           mountPath: /exports
+#   nodeSelector:
+#     node-role.kubernetes.io/nfs-server: "nfs-server"
+
+# ---
+# kind: Pod
+# apiVersion: v1
+# metadata:
+#   namespace: autostructure-development
+#   name: nfs-server
+#   labels:
+#     role: nfs-server
+# spec:
+#   volumes:
+#     - name: nfs-export-volume
+#       hostPath:
+#         path: /srv/nfs-provisioner/autostructure-development/nfs-server
+#   containers:
+#     - name: nfs-provisioner
+#       image: quay.io/kubernetes_incubator/nfs-provisioner:latest
+#       ports:
+#         - name: nfs
+#           containerPort: 2049
+#           protocol: TCP
+#         - name: mountd
+#           containerPort: 20048
+#         - name: rpcbind
+#           containerPort: 111
+#         - name: rpcbind-udp
+#           containerPort: 111
+#           protocol: UDP
+#       securityContext:
+#         privileged: true
+#         capabilities:
+#           add:
+#             - DAC_READ_SEARCH
+#       args:
+#         - "-provisioner=kubernetes.io/nfs"
+#         - "-grace-period=0"
+#       env:
+#         - name: NFS_NODE_NAME
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: spec.nodeName
+#         - name: NFS_POD_NAME
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: metadata.name
+#         - name: POD_IP
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: status.podIP
+#         - name: POD_NAMESPACE
+#           valueFrom:
+#             fieldRef:
+#               fieldPath: metadata.namespace
+#         - name: SERVICE_NAME
+#           value: nfs-server
+#       imagePullPolicy: "IfNotPresent"
+#       volumeMounts:
+#         - name: nfs-export-volume
+#           mountPath: /export
+#   nodeSelector:
+#     node-role.kubernetes.io/nfs-server: "nfs-server"
 
 
 
