added nfs-server service

--- a/examples/kubectl/nfs-ingress/nfs-volume.yaml
+++ b/examples/kubectl/nfs-ingress/nfs-volume.yaml
@@ -9,7 +9,7 @@
 # However, nfs runs in a container (with a namespace).
 # So, a separate PersistentVolume is necessary to point to
 # the nfs ip address in the autostructure-development namespace.
-# The Persisten71olumeClaim wont care which volume it connects to,
+# The PersistentVolumeClaim wont care which volume it connects to,
 # as long as the volume satisfies the claim (e.g. does it have the space?)
 # added storageClassName: nfs-storage
 kind: PersistentVolume
@@ -29,5 +29,6 @@ spec:
     # - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   nfs:
-    server: 10.0.210.171
+    server: 10.96.49.164
     path: /
+# nfs-server.default.svc.cluster.local
