--- a/examples/hieradata/role/nfs_server.yaml
+++ b/examples/hieradata/role/nfs_server.yaml
@@ -4,12 +4,12 @@
 # This file is for:
 # pp_role = nfs_server
 #
-profile::nfs_server::nfs_server_mount: /nfs-share/docker-workers/jenkins
-profile::nfs_server::nfs_server_mount_root: /nfs-share
-profile::nfs_server::nfs_server_mount_parents:
+profile::docker_ucp_nfs_server::nfs_server_mount: /nfs-share/docker-workers/jenkins
+profile::docker_ucp_nfs_server::nfs_server_mount_root: /nfs-share
+profile::docker_ucp_nfs_server::nfs_server_mount_parents:
   - /nfs-share
   - /nfs-share/docker-workers
 
-profile::nfs_server::docker_ee_url: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable,
-profile::nfs_server::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg,
-profile::nfs_server::docker_image: docker/ucp:3.1.0
+profile::docker_ucp_nfs_server::docker_ee_url: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable,
+profile::docker_ucp_nfs_server::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg,
+profile::docker_ucp_nfs_server::docker_image: docker/ucp:3.1.0
