--- a/examples/hieradata/role/docker_ucp_worker.yaml
+++ b/examples/hieradata/role/docker_ucp_worker.yaml
@@ -4,8 +4,8 @@
 # This file is for:
 # pp_role = docker_ucp_worker
 #
-profile::docker_ucp_worker::docker_ee_url: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable,
-profile::docker_ucp_worker::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg,
+profile::docker_ucp_worker::docker_ee_url: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/7/x86_64/stable
+profile::docker_ucp_worker::docker_ee_key_source: https://storebits.docker.com/ee/centos/sub-d0519671-678e-4e17-9f95-652215c673ab/centos/gpg
 profile::docker_ucp_worker::nfs_client_mount: /var/lib/jenkins
 profile::docker_ucp_worker::nfs_client_mount_parents:
   - /var
